<resources>
    <string name="app_name">Expense Monitor</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- Menu item strings -->
    <string name="expense_list_item">Expenses</string>
    <string name="category_item">Spending Categories</string>
    <string name="report_item">Expense Report</string>
    <string name="sync_item">Cloud Sync &amp; Local Backup</string>
    <string name="about_item">About</string>
    <string name="theme_layout_heading_text">Themes</string>
    <!--drawer strings-->
    <string name="drawer_header_text_view">Sign In</string>
    <string name="close">close</string>
    <string name="open">open</string>
    <!--sync fragment strings-->
    <string name="Online_Backup">Online Backup</string>
    <string name="Offline_Backup">Offline Backup</string>
    <string name="Perform_Local_Backup">Perform Local Backup</string>
    <string name="Load_Backup_File">Load Backup File</string>
    <string name="sign_in_google">Sign In with Google</string>
    <string name="sync_button_text">Sync Now</string>
    <string name="syncing">Syncing…</string>
    <string name="AutoSync">Auto Sync</string>
    <string name="sign_in_button_text">Sign In with Google</string>
    <string name="sign_out_button_text">Sign Out</string>
    <string name="not_signed_in">Not signed in.</string>
    <!--category fragment strings-->
    <string name="category_dialog_title">Add Category..</string>
    <string name="rename_category">Rename Category..</string>
    <string name="category_dialog_edittext_hint">Enter Category Name</string>
    <string name="delete_category">Delete Category</string>
    <string name="delete_dialog_content">Do you want to delete the category?</string>
    <!--expense fragment strings-->
    <string name="add_new_expense_dialog_title">Add Expense..</string>
    <string name="cost_editText">Enter Cost</string>
    <string name="item_name_editText">Enter Name</string>
    <string name="select_date">Select Date..</string>
    <string name="edit_item">Edit Item</string>
    <string name="delete_item">Delete Item</string>
    <string name="delete_expense_dialog_content">Do you want to delete the item?</string>
    <string name="expense_dialog_title_add">Add Expense..</string>
    <string name="expense_dialog_edit">Edit Expense..</string>
    <!--report fragment strings-->
    <string name="category_wise_spending">Category Wise Spending</string>
    <string name="monthly_spending">Monthly Spending</string>
    <!--About dialog strings-->
    <string name="github_link">https://github.com/YuvrajTalukdar/Password-Generator-And-Manager</string>
    <string name="about_description">For more information and also help the project:
        <a href="https://github.com/YuvrajTalukdar/ExpenseMonitor2">https://github.com/YuvrajTalukdar/ExpenseMonitor2</a>
        \n\nExpense Monitor is a Free as in Freedom software for keeping record of your daily expenses, designed for Android 6.0+.
        \n\nExpense Monitor is released under the terms of GNU General Public License v3 (GPLv3):
        <a href="http://www.gnu.org/licenses/gpl-3.0.html">http://www.gnu.org/licenses/gpl-3.0.html</a>
        \n\nIcons by Icons8: <a href="https://icons8.com"> https://icons8.com </a>
        \n\nCharts by  PhilJay\'s MPAndroidChart: <a href="https://github.com/PhilJay/MPAndroidChart">https://github.com/PhilJay/MPAndroidChart</a>
    </string>
    <string name="app_version">Version 1.0</string>
    <!--Common button text-->
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
</resources>